--- a/index.html
+++ b/index.html
@@ -25,7 +25,34 @@
                 </div>
                 <!--Aquí termina la caja de sign Up-->
             </div>
+            <div class="formBx">
+                <!--Aquí comienza el formulario de logn In-->
+                <div class="form signinFrom" >
+                    <form>
+                        <h3>Sign In</h3>
+                        <input type="text" placeholder="Usaer Name">
+                        <input type="password" placeholder="password">
+                        <input type="submit" placeholder="Login">
+                        <a href="#" class="forgot">Forget Password</a>
+
+                    </form>
+                </div>
+                <!--Aquí termina el formulario de logn In-->
+
+                <!--Aquí comienza el formulario de sign Up-->
+                <div class="form signinFrom" >
+                    <form>
+                        <h3>Sign In</h3>
+                        <input type="text" placeholder="Usaer Name">
+                        <input type="password" placeholder="password">
+                        <input type="submit" placeholder="Login">
+                        <a href="#" class="forgot">Forget Password</a>
+
+                    </form>
+                </div>
+                <!--Aquí termina el formulario de sign Up-->
+            </div>
         </div>
-    
+        <script src="./js/index.js"></script>
 </body>
 </html>
