Afinal ya quedo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="formBx">
                 <!--Aquí comienza el formulario de logn In-->
-                <div class="form signinFrom" >
+                <div class="form signinForm" >
                     <form>
                         <h3>Sign In</h3>
                         <input type="text" placeholder="Usaer Name">
@@ -40,13 +40,14 @@
                 <!--Aquí termina el formulario de logn In-->
 
                 <!--Aquí comienza el formulario de sign Up-->
-                <div class="form signinFrom" >
+                <div class="form signupForm" >
                     <form>
-                        <h3>Sign In</h3>
-                        <input type="text" placeholder="Usaer Name">
-                        <input type="password" placeholder="password">
-                        <input type="submit" placeholder="Login">
-                        <a href="#" class="forgot">Forget Password</a>
+                        <h3>Sign Up</h3>
+                        <input type="text" required placeholder="Usaer Name">
+                        <input type="email" required placeholder="Email Addres">
+                        <input type="password" required placeholder="Password">
+                        <input type="password" required placeholder="Confirm password">
+                        <input type="submit" required placeholder="Register">
 
                     </form>
                 </div>
